networkPolicy/allowAllIngress-defaultPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy02
 namespace: default
spec:
 podSelector: {}
 policyTypes:
  - Ingress
 ingress:
  - {}
