networkPolicy/denyAllIng-denyAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy01
 namespace: default
spec:
 podSelector: {}
 policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy01
 namespace: default
spec:
 podSelector: {}
 policyTypes:
  - Ingress
  - Egress
