networkPolicy/networkPolicy-samples.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy01
 namespace: default
spec:
 podSelector:
  matchLabels:
   app: web1
 policyTypes:
  - Ingress
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app: web2
    ports:
     - protocol: TCP
       port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy02
 namespace: default
spec:
 podSelector:
  matchLabels:
   app: web1
 policyTypes:
  - Ingress
 ingress:
  - from:
     - ipBlock:
        cidr: 192.168.47.0/24
     - podSelector:
        matchLabels:
         app: web2
    ports:
     - protocol: TCP
       port: 80
     - protocol: TCP
       port: 8080
       endPort: 8090
